---------------------------------------------------------------------------------------------------
Version: 0.8.0
Date: 2021-12-31
  Changes:
    - K2 1.2 alternate electronic components recipe
---------------------------------------------------------------------------------------------------
Version: 0.7.4
Date: 2021-07-26
  Changes:
    - Very minor K2 tech tree tweak
    - Minor Refactor
---------------------------------------------------------------------------------------------------
Version: 0.7.3
Date: 2021-07-01
  Features:
    - Strange matter compatibility
---------------------------------------------------------------------------------------------------
Version: 0.7.2
Date: 2021-06-26
  Changes:
    - Tweak solar cell recipe, less silicon
  Features:
    - Transport drone circuits
---------------------------------------------------------------------------------------------------
Version: 0.7.1
Date: 2021-06-16
  Features:
    - ja locale updates from Sakuro
    - Mod Mash Electronics recipes
---------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: 2021-06-16
  Features:
    - Recipe bypass setting
  Changes:
    - Polish localization tweaks, thanks to user TheoMarque
---------------------------------------------------------------------------------------------------
Version: 0.6.14
Date: 2021-06-02
  Features:
    - ja localization thanks to Sakuro
---------------------------------------------------------------------------------------------------
Version: 0.6.13
Date: 2021-05-23
  Features:
    - Zombies compatibility
---------------------------------------------------------------------------------------------------
Version: 0.6.12
Date: 2021-05-22
  Features:
    - Polish localization, thanks to user TheoMarque
---------------------------------------------------------------------------------------------------
Version: 0.6.11
Date: 2021-05-01
  Features: